Fixed not responsive list items and tag lists Added Options menu and Clear Data button

--- a/style.css
+++ b/style.css
@@ -310,21 +310,148 @@ svg * {
 :root {
     --font-basic: 'mine';
 
+    --color-light-gray: rgba(231, 231, 231, 0.6);
+    --color-dark-gray: rgba(208, 208, 208, 0.6);
+
     --container-width: clamp(300px, 30vw, 800px);
     --header-height: 100px;
     --form-max-height: 40px;
     --task-zone-min-height: 350px;
-}
+    --transition-duration: 0.2s;
 
-.button {
-    border: none;
 }
-
 
 body {
     font-family: var(--font-basic);
-    transition-duration: 0.2s;
+
+    list-style: none;
 }
+
+a,
+button,
+input,
+textarea,
+svg * {
+    transition-duration: var(--transition-duration);
+}
+
+.modal {
+    /*max-width: var(--container-width);*/
+}
+
+.modal-options {
+
+}
+
+.modal-options_card {
+
+}
+
+.modal-options_card-header {
+    display: flex;
+    justify-content: right;
+
+    margin-bottom: 30px;
+}
+
+.modal-options_card-list {
+    max-width: 250px;
+    min-width: 250px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
+.modal-options_card-item {
+    display: flex;
+    /*border: 1px solid red;*/
+    align-items: center;
+    gap: 10px;
+}
+
+
+.serverAuthForm.showed {
+    display: block;
+    opacity: 1;
+    transition-duration: 0.2s;
+
+}
+.serverAuthForm.hide {
+    opacity: 0;
+    display: block;
+    transition-duration: 0.2s;
+
+}
+
+
+.button {
+    border: none;
+    background-color: var(--color-light-gray);
+}
+
+.button:hover {
+    background-color: var(--color-dark-gray);
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 44px;
+    height: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider::before {
+    background-color: #fff;
+
+    position: absolute;
+    content: "";
+    height: 10px;
+    width: 10px;
+    bottom: 5px;
+    left: 4px;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+input:disabled + .slider {
+    opacity: 20%;
+}
+
+
 
 .container {
     width: var(--container-width);
@@ -354,10 +481,24 @@ main {
 .task-zone {
 }
 
+.task-zone-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+}
+
+
 .task-zone-filter-list {
     min-width: 80px;
+    margin-bottom: 10px;
 
     border: 3px solid;
+
+    transition-duration: var(--transition-duration);
+}
+
+.task-zone-filter-list:hover {
+    background-color: var(--color-light-gray);
 }
 
 
@@ -369,7 +510,8 @@ main {
     row-gap: 10px;
     flex: 1;
     max-height: calc(100svh - var(--header-height) - var(--form-max-height) - 100px);
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     font-size: clamp(10px, 0.93vw, 20px);
 }
@@ -398,7 +540,7 @@ main {
     gap: 5px;
     min-width: 100px;
     /*width: 110px;*/
-    /*max-width: 200px;*/
+    max-width: 250px;
 
 
     position: relative;
@@ -408,7 +550,6 @@ main {
 
     padding: 0 10px 20px;
 }
-
 
 .task-card-tag-item:not(:last-child)::after {
     content: ',';
@@ -429,6 +570,10 @@ main {
 
 }
 
+.task-card-title {
+    max-width: 35vw;
+    overflow: hidden;
+}
 
 
 .task-card.finished {
